--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -6,9 +6,12 @@ export interface Props {
 }
 const { title, description, link } = Astro.props;
 ---
+
 <div class="flex">
   <div class="flex-shrink-0">
-    <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
+    <div
+      class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white"
+    >
       <slot />
     </div>
   </div>
@@ -16,12 +19,28 @@ const { title, description, link } = Astro.props;
     <dt class="text-lg leading-6 font-medium text-gray-900">{title}</dt>
     <dd class="mt-2 text-base text-gray-500">
       {description}
-      {link && (<a href={link} class="text-indigo-500 inline-flex items-center gap-1">
-        Learn more
-        <svg class="w-4 h-4 text-indigo-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7"/>
-        </svg>
-      </a>)}
+      {
+        link && (
+          <a href={link} class="text-indigo-500 inline-flex items-center gap-1">
+            Learn more
+            <svg
+              class="w-4 h-4 text-indigo-500"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              viewBox="0 0 24 24"
+              aria-hidden="true"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9 5l7 7-7 7"
+              />
+            </svg>
+          </a>
+        )
+      }
     </dd>
   </div>
-</div> 
+</div>
+
