--- a/src/components/TechItems.astro
+++ b/src/components/TechItems.astro
@@ -9,18 +9,26 @@ const not_supported = ["akka", "typelevel", "kafka", "zio", "keycloak"];
 ---
 
 <>
-{tech.map((t) => (
-    <span class="p-3 flex flex-col items-center">
+  {
+    tech.map((t) => (
+      <span class="p-3 flex flex-col items-center">
         {not_supported.includes(t) ? (
-            <img
-                src={`/img/tech/${t}.svg`}
-                alt={t}
-                class="w-12 h-12 rounded filter grayscale"
-            />
+          <img
+            src={`/img/tech/${t}.svg`}
+            alt={t}
+            class="w-12 h-12 rounded filter grayscale"
+          />
         ) : (
-            <StackIcon variant="grayscale" className="w-12 h-12 rounded" name={t} />
+          <StackIcon
+            variant="grayscale"
+            className="w-12 h-12 rounded"
+            name={t}
+          />
         )}
-            <span class="mt-1 text-xs font-bold uppercase tracking-tight text-gray-700">{t}</span>
+        <span class="mt-1 text-xs font-bold uppercase tracking-tight text-gray-700">
+          {t}
         </span>
-    ))}
+      </span>
+    ))
+  }
 </>
