--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,19 +3,27 @@
 @tailwind utilities;
 
 @layer components {
-    .gradient-text {
-        background: #4F46E5;
-        background: -webkit-repeating-linear-gradient(to right, #4F46E5 0%, #FA36CF 100%);
-        background: -moz-repeating-linear-gradient(to right, #4F46E5 0%, #FA36CF 100%);
-        background: repeating-linear-gradient(to right, #4F46E5 0%, #FA36CF 100%);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-    }
+  .gradient-text {
+    background: #4f46e5;
+    background: -webkit-repeating-linear-gradient(
+      to right,
+      #4f46e5 0%,
+      #fa36cf 100%
+    );
+    background: -moz-repeating-linear-gradient(
+      to right,
+      #4f46e5 0%,
+      #fa36cf 100%
+    );
+    background: repeating-linear-gradient(to right, #4f46e5 0%, #fa36cf 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
-    .line-clamp-3 {
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-    }
+  .line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
