--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -38,8 +38,12 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
   <meta property="twitter:title" content={title} />
   <meta property="twitter:description" content={description} />
   <meta property="twitter:image" content={new URL(image, Astro.url)} />
-  
-  <script defer src="https://cloud.umami.is/script.js" data-website-id="94c15236-d3fd-4e26-a5b1-4f99faed9589"></script>
+
+  <script
+    defer
+    src="https://cloud.umami.is/script.js"
+    data-website-id="94c15236-d3fd-4e26-a5b1-4f99faed9589"
+  ></script>
 </head>
 
 <style is:global>
