--- a/src/components/Meteors.astro
+++ b/src/components/Meteors.astro
@@ -3,7 +3,7 @@ import { ClassValue, clsx } from "clsx";
 import { twMerge } from "tailwind-merge";
 
 export interface Props {
-//   className: string;
+  //   className: string;
   number: number;
 }
 
@@ -14,22 +14,24 @@ const meteors = new Array(number || 40).fill(true);
 function cn(...inputs: ClassValue[]) {
   return twMerge(clsx(inputs));
 }
-
 ---
+
 <>
-{meteors.map((el, idx) => (
-    <span
-    class={cn(
-        "animate-meteor-effect absolute top-1/2 left-1/3 h-0.5 w-0.5 rounded-[9999px] bg-slate-500 shadow-[0_0_0_1px_#ffffff10] rotate-[215deg]",
-        "before:content-[''] before:absolute before:top-1/2 before:transform before:-translate-y-[50%] before:w-[50px] before:h-[1px] before:bg-gradient-to-r before:from-[#7d3fba] before:to-transparent",
-        className
-    )}
-    style={{
-        top: 0,
-        left: Math.floor(Math.random() * (1200 - -400) + -400) + "px",
-        animationDelay: Math.random() * (0.8 - 0.2) + 0.2 + "s",
-        animationDuration: Math.floor(Math.random() * (10 - 2) + 2) + "s",
-    }}
-    ></span>
-))}
+  {
+    meteors.map((el, idx) => (
+      <span
+        class={cn(
+          "animate-meteor-effect absolute top-1/2 left-1/3 h-0.5 w-0.5 rounded-[9999px] bg-slate-500 shadow-[0_0_0_1px_#ffffff10] rotate-[215deg]",
+          "before:content-[''] before:absolute before:top-1/2 before:transform before:-translate-y-[50%] before:w-[50px] before:h-[1px] before:bg-gradient-to-r before:from-[#7d3fba] before:to-transparent",
+          className
+        )}
+        style={{
+          top: 0,
+          left: Math.floor(Math.random() * (1200 - -400) + -400) + "px",
+          animationDelay: Math.random() * (0.8 - 0.2) + 0.2 + "s",
+          animationDuration: Math.floor(Math.random() * (10 - 2) + 2) + "s",
+        }}
+      />
+    ))
+  }
 </>
